--- a/lib/reflect_web/templates/page/index.html.eex
+++ b/lib/reflect_web/templates/page/index.html.eex
@@ -1,7 +1,4 @@
-<div id="left-col">
-  <h1 id="time"></h1>
-  <h1 id="date"></h1>
-</div>
+<%= live_render(@conn, ReflectWeb.ClockView) %>
 <div id="right-col">
   <div id="current_weather">
     <img src="<%= @current_weather_icon %>" class="icon" />
@@ -40,29 +37,3 @@
     </li>
   </ol>
 </div>
-
-
-<script>
-  (function () {
-    function checkTime(i) {
-        return (i < 10) ? "0" + i : i;
-    }
-
-    function startTime() {
-        var today = new Date(),
-            mm = checkTime(today.getMonth()),
-            dd = checkTime(today.getDate()),
-            h = checkTime(today.getHours()),
-            m = checkTime(today.getMinutes()),
-            s = checkTime(today.getSeconds());
-        document.getElementById('time').innerHTML = h + ":" + m;
-        locale = "en-us",
-        month = today.toLocaleString(locale, { month: "short" })
-        document.getElementById('date').innerHTML = month + " " + dd;
-        t = setTimeout(function () {
-            startTime()
-        }, 3000);
-    }
-    startTime();
-  })();
-</script>
