--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -27,6 +27,8 @@ body{
         margin: 0;
         padding: 18px 0 0 18px;
         line-height:108px;
+
+        span#secs{ font-size: 40px; opacity: 0.5;padding: 0.25em;}
       }
 
       h1#date{
