Moves weather dat into liveview

--- a/lib/reflect_web/templates/page/index.html.eex
+++ b/lib/reflect_web/templates/page/index.html.eex
@@ -1,39 +1,2 @@
 <%= live_render(@conn, ReflectWeb.ClockView) %>
-<div id="right-col">
-  <div id="current_weather">
-    <img src="<%= @current_weather_icon %>" class="icon" />
-    <h1 class="temp"><%= @current_weather_temp %></h1>
-  </div>
-  <ol>
-    <li id="day_one_weather">
-      <h2 class="high_temp"><%= @day_one_weather_high_temp %></h2>
-      <h2 class="low_temp"><%= @day_one_weather_low_temp %></h2>
-      <img src="<%= @day_one_weather_icon %>" class="icon" />
-    </li>
-    <li id="day_two_weather">
-      <h2 class="high_temp"><%= @day_two_weather_high_temp %></h2>
-      <h2 class="low_temp"><%= @day_two_weather_low_temp %></h2>
-      <img src="<%= @day_two_weather_icon %>" class="icon" />
-    </li>
-    <li id="day_three_weather">
-      <h2 class="high_temp"><%= @day_three_weather_high_temp %></h2>
-      <h2 class="low_temp"><%= @day_three_weather_low_temp %></h2>
-      <img src="<%= @day_three_weather_icon %>" class="icon" />
-    </li>
-    <li id="day_four_weather">
-      <h2 class="high_temp"><%= @day_four_weather_high_temp %></h2>
-      <h2 class="low_temp"><%= @day_four_weather_low_temp %></h2>
-      <img src="<%= @day_four_weather_icon %>" class="icon" />
-    </li>
-    <li id="day_five_weather">
-      <h2 class="high_temp"><%= @day_five_weather_high_temp %></h2>
-      <h2 class="low_temp"><%= @day_five_weather_low_temp %></h2>
-      <img src="<%= @day_five_weather_icon %>" class="icon" />
-    </li>
-    <li id="day_six_weather">
-      <h2 class="high_temp"><%= @day_six_weather_high_temp %></h2>
-      <h2 class="low_temp"><%= @day_six_weather_low_temp %></h2>
-      <img src="<%= @day_six_weather_icon %>" class="icon" />
-    </li>
-  </ol>
-</div>
+<%= live_render(@conn, ReflectWeb.WeatherView) %>
