Adds padding around perimeter

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -13,9 +13,10 @@ body{
   margin:0;
 
   #main-container{
-    width:980px;
+    background-color:#555;
+    width:960px;
     height:1900px;
-    margin: 30px 50px 0px 50px;
+    margin: 30px 70px 0px 50px;
 
     div#left-col{
       float:left;
